[gd_scene load_steps=6 format=3 uid="uid://cjmycrl51i7vv"]

[ext_resource type="Script" path="res://main.gd" id="1_blbuq"]
[ext_resource type="PackedScene" uid="uid://djlppu8tjbve6" path="res://coin.tscn" id="2_8mac0"]
[ext_resource type="Texture2D" uid="uid://bgesi0g7va3d5" path="res://assets/grass.png" id="3_pfyqt"]
[ext_resource type="PackedScene" uid="uid://buqlqlnylmjvh" path="res://hud.tscn" id="3_x5dec"]
[ext_resource type="PackedScene" uid="uid://po673bpxykqg" path="res://player.tscn" id="4_6d6v8"]

[node name="Main" type="Node"]
script = ExtResource("1_blbuq")
coin_scene = ExtResource("2_8mac0")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pfyqt")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("4_6d6v8")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("3_x5dec")]

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
